--- a/assets/i18n/app_de.properties
+++ b/assets/i18n/app_de.properties
@@ -1,1 +1,4 @@
-menu_button_multiplayer=Online
+menu_text_field_join=Spiel ID eingeben...
+menu_button_tutorial=So geht's!
+menu_button_practice=Übemodus
+menu_button_host=Online Spiel hosten
