add translations, change exit buttons

--- a/assets/i18n/app.properties
+++ b/assets/i18n/app.properties
@@ -14,3 +14,16 @@ menu_text_field_join=Enter Game ID
 menu_button_tutorial=Tutorial
 menu_button_practice=Practice
 menu_button_host=Host Game
+menu_button_exit=Exit
+
+leaderboard_label_highscore=Highscore
+leaderboard_label_name=Name
+leaderboard_label_rank=Rank
+leaderboard_label_score=Score
+
+profile_label_profile=Profile
+profile_button_saveAndExit=Save and Exit
+
+lobby_button_play=Play
+
+all_button_exit=Exit
