--- a/assets/i18n/app_de.properties
+++ b/assets/i18n/app_de.properties
@@ -2,3 +2,16 @@ menu_text_field_join=Spiel ID eingeben...
 menu_button_tutorial=So geht's!
 menu_button_practice=Übemodus
 menu_button_host=Online Spiel hosten
+menu_button_exit=Verlassen
+
+leaderboard_label_highscore=Highscore
+leaderboard_text_name=Name
+leaderboard_label_rank=Rang
+leaderboard_label_score=Punktzahl
+
+profile_label_profile=Profil
+profile_button_saveAndExit=Speichern und verlassen
+
+lobby_button_play=Spielen
+
+all_button_exit=Zurück
