--- a/assets/i18n/app.properties
+++ b/assets/i18n/app.properties
@@ -14,3 +14,19 @@ menu_text_field_join=Enter Game ID
 menu_button_tutorial=Tutorial
 menu_button_practice=Practice
 menu_button_host=Host Game
+
+
+#TUTORIAL SCRIPT
+tutorial_header1=Hello Friend!
+tutorial_content1= Welcome to VIKING STOP. We need your tactical skills to defend\
+    our monastery from the attacking Vikings by sinking their ships. Please tap on an approaching Ship to sink it!
+tutorial_header2= Great Job!
+tutorial_content2= Sometimes, potion bottles appear in the ocean. Wait for one to appear and try to \
+  harness their power by sinking another ship
+tutorial_header3= Excellent! You're almost ready.
+tutorial_content3= Vikings appear increasingly over time. If they get close to our shore they start attacking.\
+  once our health bar runs out we lose the battle.
+tutorial_header4= Oh... One last thing
+tutorial_content4= In MULTIPLAYER, your task is to survive the onslaught longer than your opponent. \
+  Feel free to improve your skills in the PRACTICE MODE.
+
