--- a/assets/i18n/app.properties
+++ b/assets/i18n/app.properties
@@ -42,3 +42,8 @@ tutorial_content3= Vikings appear increasingly over time. If they get close to o
 tutorial_header4= Oh... One last thing
 tutorial_content4= In MULTIPLAYER, your task is to survive the onslaught longer than your opponent. \
   Feel free to improve your skills in the PRACTICE MODE.
+
+error_dialog_line1=An unexpected error has occurred.
+error_dialog_line2=Kindly contact support under:
+error_dialog_mail=nobody@foobar.com
+error_dialog_confirmation=Okay
