--- a/assets/i18n/app.properties
+++ b/assets/i18n/app.properties
@@ -28,6 +28,12 @@ lobby_button_play=Play
 
 all_button_exit=Exit
 
+#ERROR MESSAGES
+server_error = Server connection can't be established.
+lobby_closed_error = Lobby has been closed by host.
+lobby_cannot_be_joined_error = Lobby can't be joined.
+game_cannot_be_started_error = Game start failed.
+profile_cannot_be_updated_error = Profile can't be updated.
 
 #TUTORIAL SCRIPT
 tutorial_header1=Hello Friend!
