guest ready feature and fixes

--- a/assets/i18n/app.properties
+++ b/assets/i18n/app.properties
@@ -25,6 +25,7 @@ profile_label_profile=Profile
 profile_button_saveAndExit=Save and Exit
 
 lobby_button_play=Play
+lobby_button_guest_ready=Ready
 
 all_button_exit=Exit
 
