--- a/assets/i18n/app_de.properties
+++ b/assets/i18n/app_de.properties
@@ -13,5 +13,12 @@ profile_label_profile=Profil
 profile_button_saveAndExit=Speichern und verlassen
 
 lobby_button_play=Spielen
+lobby_button_guest_ready=Bereit
 
 all_button_exit=Zurück
+
+game_over_title_win=Glückwunsch!
+game_over_content_win=Du warst besser als dein Gegner.
+game_over_title_lost=Spiel vorbei!
+game_over_content_lost=Du bist tot :(
+
