--- a/assets/i18n/app.properties
+++ b/assets/i18n/app.properties
@@ -26,6 +26,7 @@ profile_button_saveAndExit=Save and Exit
 
 lobby_button_play=Play
 lobby_button_guest_ready=Ready
+lobby_button_host_wait=Wait for guest...
 
 all_button_exit=Exit
 
