--- a/assets/i18n/app.properties
+++ b/assets/i18n/app.properties
@@ -40,14 +40,14 @@ tutorial_header1=Hello Friend!
 tutorial_content1= Welcome to VIKING STOP. We need your tactical skills to defend \
     our monastery from the attacking Vikings by sinking their ships. Please tap on an approaching ship to sink it!
 tutorial_header2= Great Job!
-tutorial_content2= Sometimes, potion bottles appear in the ocean. Wait for one to appear and try to \
-  harness their power by sinking another ship.
-tutorial_header3= Excellent! You're almost ready.
+tutorial_content2= Sometimes, potion bottles appear in the ocean. Wait for one to appear and harness their power.\
+   (effect won't be visible if you are at full health)
+tutorial_header3= Almost ready.
 tutorial_content3= Vikings appear increasingly over time. If they get close to our shore they start attacking. \
   Once our health bar runs out we lose the battle.
-tutorial_header4= Oh... One last thing
+tutorial_header4= One last thing
 tutorial_content4= In MULTIPLAYER, your task is to survive the onslaught longer than your opponent. \
-  Feel free to improve your skills in the PRACTICE MODE.
+  Feel free to improve your skills in the PRACTICE MODE. I've taught you all I know... Good Luck!
 
 error_dialog_line1=An unexpected error has occurred.
 error_dialog_line2=Kindly contact support under:
