--- a/assets/i18n/app.properties
+++ b/assets/i18n/app.properties
@@ -22,7 +22,7 @@ leaderboard_label_rank=Rank
 leaderboard_label_score=Score
 
 profile_label_profile=Profile
-profile_button_saveAndExit=Save and Exit
+profile_button_saveAndExit=Save
 
 lobby_button_play=Play
 lobby_button_guest_ready=Ready
@@ -60,3 +60,5 @@ game_over_title_win=Congratulations!
 game_over_content_win=You've been better than you opponent.
 game_over_title_lost=Game Over!
 game_over_content_lost=You're dead :(
+
+overlay_button_okay=Okay
