--- a/assets/i18n/app_de.properties
+++ b/assets/i18n/app_de.properties
@@ -10,7 +10,7 @@ leaderboard_label_rank=Rang
 leaderboard_label_score=Punktzahl
 
 profile_label_profile=Profil
-profile_button_saveAndExit=Speichern und verlassen
+profile_button_saveAndExit=Speichern
 
 lobby_button_play=Spielen
 lobby_button_guest_ready=Bereit
