language file fix

--- a/assets/i18n/app.properties
+++ b/assets/i18n/app.properties
@@ -10,7 +10,7 @@ example_2=You covered {0,number}% of the path
 
 app_name=VikingGame
 menu_button_multiplayer=Multiplayer
-menu_text_field_join=Enter Game ID
+menu_text_field_join=Enter\ Game\ ID
 menu_button_tutorial=Tutorial
 menu_button_practice=Practice
 menu_button_host=Host Game
